<resources>
    <string name="app_name" translatable="false">Gadgeothek</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hint_email">E-Mail Address</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Login</string>
    <string name="hint_name">Name</string>
    <string name="hint_student_number">Student Number</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="preference_file_key" translatable="false">AppPreferences.xml</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hint_custom_server">Custom Server URI</string>
    <string name="default_server" translatable="false">http://192.168.178.24:8080/public</string>
    <string name="enter_valid_uri">Please enter a valid URI</string>
    <string name="custom_server_switch_description">Do you want to login on a custom server?</string>
    <string name="default_custom_server" translatable="false">http://mge8.dev.ifs.hsr.ch/public</string>
    <string name="button_text_create_account">Create an account</string>
    <string name="button_description_create_account">Are you in need of an account? Click below to create an account within minutes</string>
    <string name="uri_required">Custom server URI is required</string>
    <string name="login_successful">Login succeeded</string>
    <string name="login_failed">Login failed</string>
    <string name="no_server_connection">Could not connect to server: %1$s</string>
    <string name="enter_a_valid_email_address">Please enter a valid email address</string>
    <string name="email_address_required">Email address is required</string>
    <string name="password_required">Password is required</string>
    <string name="registration_failed">Registration failed</string>
    <string name="name_required">Name required</string>
    <string name="student_number_required">Student number is required</string>
    <string name="reservation_successful">Reservation successful</string>
    <string name="reservation_failed">Reservation failed</string>
    <string name="unable_to_reserve_gadget">Unable to reserve gadget:\n%1$s</string>
    <string name="deletion_successful">Reservation successful deleted</string>
    <string name="deletion_failed">Deletion failed</string>
    <string name="unable_to_delete_reservation">Unable to delete reservation\n%1$s</string>
    <string name="error_loading_gadgets">Error loading gadgets: %1$s</string>
    <string name="failed_loading_return_date">Failed to load return date</string>
    <string name="return_date">Return Date: %1$s</string>
    <string name="error_loading_loans">Error loading loans: %1$s</string>
    <string name="error_loading_reservations">"Error loading reservations:\n%1$s"</string>
    <string name="no_reservations_found">No Reservations. You can reserve gadgets in the All Gadgets menu :-)</string>
    <string name="no_gadgets_yet">No Gadgets at this School... Go Go Inspector Gadget =)</string>
    <string name="sucessful_logout">Successfully logged out</string>
    <string name="logout_error">Error Logging Out: \n%1$s</string>
    <string name="no_loans_yet">No Loans Yet. There is cool stuff to be tested. Visit the library!</string>
    <string name="waiting_position">Waiting Position: %1$d</string>
    <string name="register_on_custom_server">Do you want to register on a custom server?</string>
    <string name="really_delete">Really delete?</string>
    <string name="really_delete_reservation">Are you sure you want to cancel the reservation of %1$s?</string>
    <string name="delete_reservation">Delete reservation</string>
    <string name="abort_action">Cancel</string>
    <string name="nav_my_gadgets">My Gadgets</string>
    <string name="nav_my_reservations">My Reservations</string>
    <string name="nav_all_gadgets">All Gadgets</string>
    <string name="nav_logout">Logout</string>
    <string name="overdue">Overdue</string>
</resources>
