<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_activities" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_my_gadgets"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_my_gadgets" />
        <item
            android:id="@+id/nav_my_reservations"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_my_reservations" />
        <item
            android:id="@+id/nav_all_gadgets"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_all_gadgets" />
    </group>
    <group
        android:id="@+id/nav_actions">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/nav_logout" />
    </group>

</menu>
