<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ch.hsr_heroes.gadgeothek.CustomServerPartialFragment">

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch_custom_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/custom_server_switch_description" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_custom_server_uri"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/input_custom_server_uri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/hint_custom_server"
            android:inputType="textUri"
            android:text="@string/default_custom_server" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>
